src/objects/SNI_Advocate_Detail__c.object
<CustomObject>
    <description>SNI Advocate Detail</description>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name - Advocate Detail</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name - Advocate Detail</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logon_ID__c</fullName>
        <description>Logon ID - Advocate Detail</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logon ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logon_Office__c</fullName>
        <description>Logon Office - Advocate Detail</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logon Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_ID__c</fullName>
        <description>MS ID - Advocate Details</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name - Advocate Detail</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status - Advocate Detail</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SNI Advocate Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MS_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Logon_ID__c</columns>
        <columns>Logon_Office__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SNI-{0000}</displayFormat>
        <label>SNI Advocate  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SNI Advocate Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>